Fixed overflow issue on menu. Changed menu to tight instead of fullscreen. Comes from corner rather than center also.

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -26,7 +26,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    width: 100%
+    width: 16.67%
 }
 
 .background {
